[package]
name = "adbexplorer"
version = "0.1.0"
authors = ["laineprikol <laineprikol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_engine = "2.0.1"
generational-arena = "0.2"
anyhow = "1.0.40"
log = "0.4.11"
flexi_logger = "0.18.0"